--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "private": true,
   "engines": {
-    "node": ">=24.0.0",
     "bun": ">=1.3.0"
   },
   "workspaces": [
@@ -32,7 +31,11 @@
     "type": "git",
     "url": "git+https://github.com/tbsvttr/datasworn.git"
   },
-  "keywords": ["ironsworn", "starforged", "TTRPG"],
+  "keywords": [
+    "ironsworn",
+    "starforged",
+    "TTRPG"
+  ],
   "author": {
     "name": "rsek",
     "email": "r.sekouri@gmail.com",
@@ -64,8 +67,8 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    		"@sinclair/typebox": "^0.34.41",
-		"@sinclair/typebox-codegen": "^0.10.4",
+    "@sinclair/typebox": "^0.34.41",
+    "@sinclair/typebox-codegen": "^0.10.4",
     "@swc/core": "^1.7.10",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
