--- a/tools/viewer/tsconfig.json
+++ b/tools/viewer/tsconfig.json
@@ -10,7 +10,7 @@
 		"skipLibCheck": true,
 		"esModuleInterop": true,
 		"resolveJsonModule": true,
-		"types": []
+		"types": ["vite/client"]
 	},
 	"include": ["src"]
 }
