chore: re-enable 7 stricter biome lint rules
Re-enable previously disabled rules and fix 31 violations:
- noEmptyInterface, noRedeclare, noShadowRestrictedNames (0 violations)
- noUnusedFunctionParameters (prefix unused params with _)
- noNamespace (convert augmentations.ts and validators.ts to plain objects)
- useEnumInitializers, useLiteralEnumMembers (use literal strings in RollMethod)

Remaining disabled rules (intentional):
- noExplicitAny: ~98 violations, many justified for generic JSON handling
- useConsistentArrayType, useNamingConvention: deferred

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -25,11 +25,11 @@
 			"recommended": true,
 			"correctness": {
 				"noUnusedVariables": "warn",
-				"noUnusedFunctionParameters": "off",
+				"noUnusedFunctionParameters": "warn",
 				"noUnsafeFinally": "warn"
 			},
 			"style": {
-				"noNamespace": "off",
+				"noNamespace": "warn",
 				"useConsistentArrayType": "off",
 				"useImportType": "error",
 				"useNamingConvention": {
@@ -37,19 +37,19 @@
 					"options": { "strictCase": false }
 				},
 				"noNonNullAssertion": "warn",
-				"useEnumInitializers": "off",
-				"useLiteralEnumMembers": "off"
+				"useEnumInitializers": "warn",
+				"useLiteralEnumMembers": "warn"
 			},
 			"suspicious": {
-				"noEmptyInterface": "off",
-				"noRedeclare": "off",
+				"noEmptyInterface": "warn",
+				"noRedeclare": "warn",
 				"noExplicitAny": "off",
 				"noTemplateCurlyInString": "warn",
 				"useAdjacentOverloadSignatures": "warn",
 				"noThenProperty": "warn",
 				"useIterableCallbackReturn": "warn",
 				"noImplicitAnyLet": "warn",
-				"noShadowRestrictedNames": "off"
+				"noShadowRestrictedNames": "warn"
 			},
 			"complexity": {
 				"noThisInStatic": "warn",
