--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         run: bun run check
 
       - name: Run tests
-        run: bun test src/ pkg/
+        run: bun test src/
 
   test-viewer:
     runs-on: ubuntu-latest
